include/synthizer_constants.h

#pragma once

#ifdef __cplusplus
extern "C" {
#endif 

enum SYZ_PANNER_STRATEGIES {
	SYZ_PANNER_STRATEGY_HRTF = 0,
	SYZ_PANNER_STRATEGY_STEREO = 1,
	SYZ_PANNER_STRATEGY_COUNT,
};

/*
 * Distance models, modeled after the WebAudio spec.
 * */
enum SYZ_DISTANCE_MODEL {
	SYZ_DISTANCE_MODEL_NONE,
	SYZ_DISTANCE_MODEL_LINEAR,
	SYZ_DISTANCE_MODEL_EXPONENTIAL,
	SYZ_DISTANCE_MODEL_INVERSE,
	SYZ_DISTANCE_MODEL_COUNT,
};


/*
 * Properties. by object type.
 * 
 * We leave room between these enums so that these can be extended; synthizer links these in an object oriented hierarchy.
 * 
 * In general greater properties are on more-derived objects, and the leading digits try to specify how derived.
 * */

enum SYZ_CONTEXT_PROPERTIES {
	SYZ_CONTEXT_LISTENER_POSITION = 100,
	SYZ_CONTEXT_LISTENER_ORIENTATION = 101,
	SYZ_CONTEXT_DISTANCE_MODEL = 102,
	SYZ_CONTEXT_DISTANCE_REF = 103,
	SYZ_CONTEXT_DISTANCE_MAX = 104,
	SYZ_CONTEXT_ROLLOFF = 105,
	SYZ_CONTEXT_CLOSENESS_BOOST = 106,
	SYZ_CONTEXT_CLOSENESS_BOOST_DISTANCE = 107,
};

enum SYZ_PANNED_SOURCE_PROPERTIES {
	SYZ_PANNED_SOURCE_AZIMUTH = 200,
	SYZ_PANNED_SOURCE_ELEVATION = 201,
	SYZ_PANNED_SOURCE_PANNING_SCALAR = 202,
	SYZ_PANNED_SOURCE_PANNER_STRATEGY = 203,
	SYZ_PANNED_SOURCE_GAIN = 204,
};

enum SYZ_SOURCE3D_PROPERTIES {
	SYZ_SOURCE3D_POSITION = 300,
	SYZ_SOURCE3D_ORIENTATION = 301,
	SYZ_SOURCE3D_DISTANCE_MODEL = 302,
	SYZ_SOURCE3D_DISTANCE_REF = 303,
	SYZ_SOURCE3D_DISTANCE_MAX = 304,
	SYZ_SOURCE3D_ROLLOFF = 305,
	SYZ_SOURCE3D_CLOSENESS_BOOST = 306,
	SYZ_SOURCE3D_CLOSENESS_BOOST_DISTANCE = 307,
};

#ifdef __cplusplus
}
#endif